# JumpingDemo

./: .gitignore  README.md  main.cpp  resource_config
LaboratoryWorks/Lab_1.5/: CMakeLists.txt  README.md
LaboratoryWorks/Lab_1.5/src/: CMakeLists.txt  main.cpp  tritset.cpp  tritset.h
LaboratoryWorks/Lab_1.5/tests/: CMakeLists.txt  tritset_test.cpp
LaboratoryWorks/Lab_2/: CMakeLists.txt
LaboratoryWorks/Lab_2/graphics/: commands.cpp  commands.h  visualizer.h  window.h
LaboratoryWorks/Lab_2/main/: element.cpp  element.h  main.cpp
LaboratoryWorks/Lab_3/: CMakeLists.txt  main.cpp  resource_config
LaboratoryWorks/Lab_3/4reference/: objloader.cpp
LaboratoryWorks/Lab_3/engine/: CMakeLists.txt  README.md  controls.cpp  controls.hpp  entity.hpp  game.cpp  game.hpp  light.cpp  light.hpp  model.cpp  model.hpp  objloader.cpp  physics.cpp  physics.hpp  physics1.hpp  rmanager.cpp  rmanager.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
LaboratoryWorks/Lab_3/resources/: Last City Shell.blend  LastCityShellDecals_Diffuse.dds  LastCityShellEye_Diffuse.dds  LastCityShell_Normal.dds  lamp.mtl  scene.mtl
LaboratoryWorks/Lab_3/shaders/: FShader.fragmentshader  MaterialShader.fs  SkyboxShader.fs  VShader.vertexshader
LaboratoryWorks/Lab_3/src/: main.cpp  model.cpp  model.hpp  window.cpp
LaboratoryWorks/Lab_4/: CMakeLists.txt  in.txt  main.cpp
engine/: CMakeLists.txt  controls.cpp  controls.hpp  entity.cpp  entity.hpp  gl_includes.hpp  light.cpp  light.hpp  model.cpp  physics.cpp  physics.hpp  rmanager.cpp
resources/: IcoSphere.mtl  LastCityShell.fbx  LastCityShell.mtl  LastCityShell_Diffuse.dds  LastCityShell_Gstack.dds  checkedCube.mtl  untitled.blend
shaders/: LightShader.fs  LightShader.vs  MaterialShader.fs
(+7 files in other folders)
